--- a/worldwild_backend/requirements.txt
+++ b/worldwild_backend/requirements.txt
@@ -6,7 +6,7 @@ charset-normalizer==3.4.2
 cryptography==45.0.5
 cssselect2==0.8.0
 defusedxml==0.7.1
-Django==5.2.4
+Django
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
@@ -30,8 +30,8 @@ qrcode==8.2
 reportlab==4.4.3
 requests==2.32.4
 requests-oauthlib==2.0.0
-social-auth-app-django==5.5.1
-social-auth-core==4.7.0
+social-auth-app-django
+social-auth-core
 sqlparse==0.5.3
 tinycss2==1.4.0
 tinyhtml5==2.0.0
