--- a/worldwild_backend/requirements.txt
+++ b/worldwild_backend/requirements.txt
@@ -26,7 +26,7 @@ oauthlib==3.3.1
 openpyxl==3.1.5
 packaging==25.0
 pillow==11.3.0
-psycopg2-binary==2.9.9
+psycopg==3.3.1
 pycparser==2.22
 pydyf==0.11.0
 PyJWT==2.9.0
