--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -11,7 +11,8 @@ services:
     depends_on:
       - db
     environment:
-    - DJANGO_SETTINGS_MODULE=worldwild_backend.settings.local
+      - DJANGO_SETTINGS_MODULE=worldwild_backend.settings.local
+      - PYTHONUNBUFFERED=1
     #environment:
 #      POSTGRES_DB: ${POSTGRES_DB}
  #     POSTGRES_USER: ${POSTGRES_USER}
