--- a/.env.local
+++ b/.env.local
@@ -4,8 +4,9 @@ POSTGRES_USER=appuser
 POSTGRES_PASSWORD=apppass
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
-APP_ID=2369085495887617
-APP_SECRET=ydl7CMkFSApTTmqUg1pJPEsfiLKh3SLB
-REDIRECT_URI=https://borradoresdeviaje.com/
-MP_ACCESS_TOKEN=TEST-2369085495887617-081310-f1b74fc07f6bec6e463ede3eb813b6be-2409966769
+APP_ID=4728062981588764
+APP_SECRET=ct6urSRBJln4XFSznbVm9Y0yAgUuhOBO
+REDIRECT_URI=https://golocalbackend.onrender.com/api/success/
+MP_ACCESS_TOKEN=APP_USR-2157889419867440-090308-4ddfe74de6918339801ebbb5009f04d9-2633951459
 FERNET_KEY=T2z5bOzss-rOsz5HlHkyIp8j8jP0A1-JhJhAqJDBSBE=
+
